force-app/main/default/objects/Data_Masking_Configuration__mdt/Data_Masking_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to store the fields and their masking type to be used when refreshing full and partial copy sandboxes to scrub sensitive data from the sandboxes.</description>
    <label>Data Masking Configuration</label>
    <pluralLabel>Data Masking Configurations</pluralLabel>
</CustomObject>