force-app/main/default/objects/Data_Masking_Configuration__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>The field which has a PII data that needs to be masked during refreshes.</description>
    <label>FieldName</label>
    <metadataRelationshipControllingField>Data_Masking_Configuration__mdt.ObjectName__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Data_Masking_Configurations</relationshipLabel>
    <relationshipName>Data_Masking_Configurations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>