force-app/main/default/objects/Data_Masking_Configuration__mdt/fields/MaskingRule__c.field-meta.xml
<CustomField>
    <fullName>MaskingRule__c</fullName>
    <description>Choices for the type of masking that needs to be applied for the field.</description>
    <label>MaskingRule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom String</fullName>
                <default>true</default>
                <label>Custom String</label>
            </value>
            <value>
                <fullName>Random Date</fullName>
            </value>
            <value>
                <fullName>Random Email</fullName>
            </value>
            <value>
                <fullName>Random Phone</fullName>
            </value>
            <value>
                <fullName>Random String</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>