force-app/main/default/objects/Data_Masking_Configuration__mdt/fields/MaskingText__c.field-meta.xml
<CustomField>
    <fullName>MaskingText__c</fullName>
    <description>Applicable for masking rule custom string.  Stores the custom value that needs to be replaced.</description>
    <label>MaskingText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>