force-app/main/default/objects/Data_Masking_Configuration__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>The object which has a PII field that needs to be masked during refreshes.</description>
    <label>ObjectName</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Data_Masking_Configurations</relationshipLabel>
    <relationshipName>Data_Masking_Configurations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>